hcc/tests/conform/errors/parse/unclosed_brace.hc
//@ error: unexpected end of input
#include <stdlib.hh>
U0 Main()
{
  I64 x = 1;
